src/test/ui/compile-fail-migration/region-bound-same-bounds-in-trait-and-impl.stderr
error: compilation successful
  --> $DIR/region-bound-same-bounds-in-trait-and-impl.rs:27:1
   |
LL | fn main() { } //~ ERROR compilation successful
   | ^^^^^^^^^^^^^

error: aborting due to previous error

